--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+Compiled/
+.DS_Store
+Exec/.DS_Store
